18_reverse_str/grade.txt
Grading at Sat Mar 16 00:34:32 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘main’:
reverse.c:32:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   str0[0] = "\0";
           ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
